--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,8 @@
         "cmath": "cpp",
         "new": "cpp",
         "iomanip": "cpp",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "state_vector_test.C": "cpp",
+        "state_vector.C": "cpp"
     }
 }
