--- a/main/.vscode/settings.json
+++ b/main/.vscode/settings.json
@@ -5,6 +5,7 @@
         "state_vector.C": "cpp",
         "Var1D.C": "cpp",
         "header.C": "cpp",
-        "file_configuration_test.C": "cpp"
+        "file_configuration_test.C": "cpp",
+        "TEST.C": "cpp"
     }
 }
