Parallelized second derivative fully, in modular way

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "ostream": "cpp",
         "NonLinearWaveEquationSolver1D.C": "cpp",
         "fstream": "cpp",
-        "chrono": "cpp"
+        "chrono": "cpp",
+        "parallel_main.C": "cpp"
     }
 }
